# black-hat

./: README.md
.github/workflows/: ci.yaml
crawler/: Cargo.toml
crawler/src/: crawler.rs  error.rs  main.rs
crawler/src/spiders/: cvedetails.rs  github.rs  quotes.rs
sha1_cracker/: Cargo.toml
sha1_cracker/src/: main.rs
tricoder/: Cargo.toml
tricoder/src/: common_ports.rs  error.rs  errors.rs  main.rs  ports.rs  subdomains.rs
