[package]
name = "crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.6.1"
tokio = { version = "1.52.3", features = ["full"] }
reqwest = { version = "0.13.3", default-features = false, features = ["json"] }
anyhow = "1.0"
thiserror = "2.0.18"
async-trait = "0.1.89"
log = "0.4.29"
env_logger = "0.11.10"
select = "0.6.1"
url = "2.5.8"
futures = "0.3.32"
tokio-stream = "0.1.18"
fantoccini = { version = "0.22.1", default-features = false, features = ["rustls-tls"] }
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
regex = "1.12.3"