[package]
name = "tricoder"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
rayon = "1.12.0"
tokio = { version = "1.52.1", features = ["full"] }
reqwest = { version = "0.13.2", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.228", features = ["derive"] }
trust-dns-resolver = "0.23.2"
futures = "0.3.32"
tokio-stream = "0.1.18"
thiserror = "2.0.18"
